--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Start of a netflow and snmp monitoring tool
 
 Designed for use on a small/home network.  Testing against dd-wrt
+
+Goal is to make this easy to install and use.  (trying to minimize any apache/database setup, we'll see how that goes)
