added a TODO to the readme to track ideas etc

--- a/README
+++ b/README
@@ -3,3 +3,9 @@ Start of a netflow and snmp monitoring tool
 Designed for use on a small/home network.  Testing against dd-wrt
 
 Goal is to make this easy to install and use.  (trying to minimize any apache/database setup, we'll see how that goes)
+
+
+TODO:
+Database creation
+perf testing
+storage (may look into forking the storage processor, depends on perf)
